# OpenGL-Simulator

./: .gitignore  CMakeLists.txt  README.md  run.bat
assets/models/: airplane.txt  grid.txt
assets/shaders/: default.frag  default.vert
include/simulator/core/: Application.h  Engine.h  Input.h
include/simulator/graphics/: EBO.h  Renderer.h  ShaderProgram.h  VAO.h  VBO.h
include/simulator/io/: Loader.h  ObjLoader.h
include/simulator/scene/: Camera.h  Mesh.h  Renderable.h
include/simulator/sim/: Simulation.h
src/app/: main.cpp  main2.cpp
src/core/: Application.cpp  Engine.cpp  Input.cpp
src/graphics/: EBO.cpp  Renderer.cpp  ShaderProgram.cpp  VAO.cpp  VBO.cpp
src/io/: Loader.cpp  ObjLoader.cpp
src/scene/: Mesh.cpp  Renderable.cpp
src/sim/: Simulation.cpp
